--- a/public/main.css
+++ b/public/main.css
@@ -31,38 +31,68 @@
 }
 
 .header-container {
-    color: #5995DA;
     background-color: #D6E9FE;
-    display: flex;
-    justify-content: center;
+    padding: 20px 0;
+    /* border: 1px solid blue; */
   }
   
-  /* .header {
-    border: 1px solid red; 
-  } */
+  .title-wrapper, .form {
+    margin: auto;
+    width: 50%;
+  }
 
-  .title {
+  .title-name {
     font-family: 'STIX Two Text', serif;
-    font-size: 5em;
+    font-size: 4.5em;
     color: black;
-    padding: .3em;
+    text-align: center;
 }
+
+  .form {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #task-name, #add-task-btn {
+    height: 40px;
+    font-size: 1.5em;
+    border: 1.5px solid pink;
+  }
+
+  #task-name {
+    border-right: none;
+    width: 70%;
+    padding-left: .7em;
+    color: black; /* text color */
+  }
+
+  #add-task-btn {
+    background: pink;
+    color: white;
+    cursor: pointer;
+    width: 5%;
+  }
+  #add-task-btn:hover {
+    background-color: rgb(248, 126, 147);
+  }
 
 
 .task-container {
+    padding: 20px 0;
     display: flex;
     justify-content: center;
-    border: 1px solid red;
   }
   
-  .task-grid {
+  .task-list {
     border: 1px solid black;
-    width: 80%;
+    /* width: 80%; */
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
   
     ul {
@@ -71,12 +101,12 @@
 
     .list-item {
         border: 1px solid blue;
-        font-family: 'STIX Two Text', serif;
+        font-family: 'STIX Two Text', serif; 
         font-size: 2em;
         padding: .3em;
         margin: .3em;
     }
-
+    
 
   /* .footer {
     display: flex;
