--- a/public/main.css
+++ b/public/main.css
@@ -89,7 +89,7 @@
 
   .task-list {
     /* border: 1px solid black; */
-    width: 50%;
+    width: 40%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -108,12 +108,7 @@
     margin-bottom: .5em;
   }
 
-  .tasks:hover {
-    /* cursor: pointer; */
-    /* border: 1px solid black; */
-    /* color: inherit; */
-    background-color: rgb(224, 224, 224);
-  }
+
 
   .list-item {
     /* border: 1px solid black; */
@@ -134,6 +129,16 @@
     font-family: 'STIX Two Text', serif; 
     font-size: 1.5em;
     /* margin-right: 5em; */
+    /* opacity: .3; */
+    /* visibility: hidden; */
+  }
+
+  .tasks:hover {
+    /* cursor: pointer; */
+    /* border: 1px solid black; */
+    /* color: inherit; */
+    background-color: rgb(224, 224, 224);
+    visibility: visible;
   }
 
   input[class=md-task]:checked~li.list-item {
@@ -149,7 +154,7 @@
   .footer-item {
     /* border: 1px solid black; */
     float: right;
-    background-color: #D6E9FE;
+    /* background-color: #D6E9FE; */
     font-family: 'STIX Two Text', serif; 
     /* font-size: 1em; */
     margin-right: 20em;
