--- a/public/main.css
+++ b/public/main.css
@@ -83,6 +83,13 @@
     padding: 20px 0;
   }
 
+  .error {
+    color: red;
+    font-family: 'STIX Two Text', serif; 
+    font-size: 1.5em;
+    text-align: center;
+  }
+
   ul {
     list-style: none;
   }
